# xblock-thumbs

./: MANIFEST.in  README.md  pyproject.toml
src/thumbs/: __init__.py
src/thumbs/public/: learner-view-v2.js
src/thumbs/static/: thumbs.js
