[project]
name = "xblock_thumbs"
version = "0.0.1"
description = "A small example XBlock"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.entry-points."xblock.v1"]
thumbs = "thumbs:ThumbsBlock"
